<resources>
    <string name="app_name">FirebasePractice</string>
    <string name="firebase_practice">FireBase Practice</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup_here">SignUp Here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="full_name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="forgot_password_text">Don\'t worry it happens. Please Enter the address associated with your account.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset">Reset</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
</resources>