<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.shivansh.firebasepractice.viewModels.LoginFragmentViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".views.activities.MainActivity">

            <androidx.cardview.widget.CardView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="35dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/login_image"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/login"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:error="@{viewModel.errorModel.emailErrorMessage}"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_email"
                app:layout_constraintTop_toBottomOf="@id/textLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}"
                    android:maxLines="1"
                    android:nextFocusDown="@id/et_password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:error="@{viewModel.errorModel.passwordErrorMessage}"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textFieldEmail"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/sky_blue"
                app:layout_constraintTop_toBottomOf="@id/textFieldPassword"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/forgotPasswordText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="50dp"
                android:text="@string/login"
                android:onClick="@{() -> viewModel.onClickLogin()}"
                android:backgroundTint="@color/sky_blue"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/notAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/don_t_have_an_account"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bt_login" />

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:text="@string/signup_here"
                android:textColor="@color/sky_blue"
                android:onClick="@{() -> viewModel.onClickSignUp()}"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/notAccountText"
                app:layout_constraintTop_toBottomOf="@id/bt_login" />

            <Button
                android:id="@+id/PhoneVerification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/phone_verification"
                android:textSize="22sp"
                android:textStyle="bold"
                android:backgroundTint="@color/cardview_dark_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUpText" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>